[ADD] missing note field in the fiscal position form
On invoice it can be printed, but there was no way to enter it.

--- a/addons/account/views/partner_view.xml
+++ b/addons/account/views/partner_view.xml
@@ -62,6 +62,11 @@
                             </field>
                         </group>
                         </page>
+                        <page name="note" string="Remark">
+                            <group>
+                                <field name="note" />
+                            </group>
+                        </page>
                     </notebook>
                     </sheet>
                 </form>
